Bug 90257 - buttons header or footer disappear
Summary: buttons header or footer disappear
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-03-26 13:48 UTC by jubero
Modified: 2016-03-21 22:51 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
printscreen (45.70 KB, image/png)
2015-03-26 14:12 UTC, raal
Details
Error on LibreOffice Calc 5.0.5.2 (Ubuntu 15.10) (51.62 KB, image/png)
2016-03-16 12:10 UTC, Rafael
Details
My version of LibreOffice. (50.15 KB, image/png)
2016-03-16 12:10 UTC, Rafael
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jubero 2015-03-26 13:48:55 UTC
After using the Format> Page> Header> Edit to edit the header or footer and if you choose a very large font for the lyrics of one of them and closed the window and see another access to this function the editing buttons disappear, become inaccecibles with pointer and you can not edit fonts or anything header or footer ..
Comment 1 raal 2015-03-26 14:12:16 UTC
Created attachment 114380 [details]
printscreen

I can confirm with LO 4.4.1.2, win7
Comment 2 Matthew Francis 2015-04-07 01:05:46 UTC
To restate the reproduction instructions for this:

- Create a new Calc spreadsheet
- Open menu Format - Page
- Select tab Header - Edit...
- Click on Custom header - Text Attributes
- Set Size to 96
- "OK" to the Text Attributes dialog
- "OK" to the Header dialog
- Reopen "Edit..."

Actual result:

- When reopened, the Header dialog is not rendered correctly (too tall, buttons invisible)
Comment 3 Matthew Francis 2015-04-07 01:07:45 UTC
This seems to be a result of the UI conversion for the dialog
Adding Cc: to olivier.hallot@documentfoundation.org; Could you possibly take a look at this? Thanks

commit 70af05cf740d3b4639f110489dc0e9e1e7571931
Author: Olivier Hallot <olivier.hallot@edx.srv.br>
Date:   Wed May 1 20:47:34 2013 -0300

    Convert Calc page header/footer content to Widget UI
    
    Change-Id: I26465f69a7fa50fa58643c00225376a82ba8a7fc
Comment 4 Commit Notification 2015-05-08 13:33:45 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c1405651f6c0c8e519e0aed3f12473499d8ed942

tdf#90257: Prevent dialog from growing out of the screen

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Katarina Behrens (Inactive) 2015-05-08 13:41:00 UTC
... which makes this fixed for 5.0

Give me a yell if you want to backport
Comment 6 Robinson Tryon (qubit) 2015-12-17 08:50:08 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]
Comment 7 Rafael 2016-03-16 12:08:59 UTC
The error remains on version 5.0.5.2 of LibreOffice for Linux (Ubuntu 15.10).
Comment 8 Rafael 2016-03-16 12:10:08 UTC
Created attachment 123624 [details]
Error on LibreOffice Calc 5.0.5.2 (Ubuntu 15.10)
Comment 9 Rafael 2016-03-16 12:10:43 UTC
Created attachment 123625 [details]
My version of LibreOffice.
Comment 10 Katarina Behrens (Inactive) 2016-03-21 22:51:26 UTC
The fix was incomplete, it only affected the leftmost text edit. 

The rest has now been dealt with in a separate bug 97963