tdf#90257: Prevent dialog from growing out of the screen

when large font sizes are used. Set size request on 1 edit widget
(+- match what used to be in the old .src file), the remaining two
are in the same grid, so this will hopefull do the trick

Change-Id: I3ca27ea4d037cf8877f022c1ee5ed7f348b0cfdd