sc/source/ui/pagedlg/scuitphfedit.cxx
@@ -132,6 +132,12 @@ ScHFEditPage::ScHFEditPage( vcl::Window*             pParent,
     m_pWndCenter->SetFont( aPatAttr );
     m_pWndRight->SetFont( aPatAttr );
 
+    // Set size request of 1 widget, the other two will follow as they are
+    // in the same grid
+    Size aSize = LogicToPixel(Size(80, 120), MAP_APPFONT);
+    m_pWndLeft->set_width_request(aSize.Width());
+    m_pWndLeft->set_height_request(aSize.Height());
+
     m_pWndLeft->SetObjectSelectHdl( LINK(this,ScHFEditPage,ObjectSelectHdl) );
     m_pWndCenter->SetObjectSelectHdl( LINK(this,ScHFEditPage,ObjectSelectHdl) );
     m_pWndRight->SetObjectSelectHdl( LINK(this,ScHFEditPage,ObjectSelectHdl) );
